--- a/styles/index.css
+++ b/styles/index.css
@@ -1,55 +1,249 @@
-*{
-      margin:0;
-      padding:0;
-      box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
-      text-decoration: none;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
 }
-:root{
-      --primary-bg: #fff;
-      --primary-font : #000;
-      --secondary-bg: #000;
-      --secondary-font: #fff;
+:root {
+  --primary-bg: #fff;
+  --primary-font: #000;
+  --secondary-bg: #000;
+  --secondary-font: #fff;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
 /* HEADER */
-header{
-      width: 100%;
-      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+header {
+  height: auto;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
-
-.navbar{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-direction: row;
-      width: 100%;
-      overflow: hidden;
-      padding: 10px 30px 5px 30px;      
+.navbar {
+  display: flex;
+  background: white;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
 }
-.navbar__links{
-      display: flex;
-      align-items: center;
-      gap: 20px;
+.navbar__links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
 }
-.navbar__links >a{
-      color: var(--primary-font);
+.navbar__links > a {
+  color: var(--primary-font);
 }
-.navbar__btn{
-      display: flex;
-      align-items: center;
-      gap:20px;
+.navbar__btn {
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
 /* COMPONENTS */
-.btn{
-      padding:8px 20px 8px 20px ;
+.btn {
+  padding: 8px 20px 8px 20px;
 }
-.btn__primary{
-      background : var(--primary-bg);
-      color: var(--primary-font);
-      border: 1px solid rgba(0, 0, 0, 0.1);
+.btn__primary {
+  background: var(--primary-bg);
+  color: var(--primary-font);
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.btn__secondary{
-      background: var(--secondary-bg);
-      color: var(--secondary-font);
+.btn__secondary {
+  background: var(--secondary-bg);
+  color: var(--secondary-font);
+}
+.container {
+  width: 80%;
+  max-width: 1440px;
+}
+/* HERO */
+.hero {
+  display: flex;
+  height: 100vh;
+}
+.hero__container {
+  display: flex;
+}
+.hero__container-left {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
+  gap: 20px;
+  padding: 64px;
+}
+.hero__container-left-btn {
+  display: flex;
+}
+.hero__container-right {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+}
+.hero__right-img {
+  height: 75%;
+  background: #b5b5b5;
+  background-size: fit;
+}
+.hero__right-bottom {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  gap: 24px;
+  height: 20%;
+  background: #eae9e9;
+}
+.hero__right-bottom-text {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.hero__right-bottom-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero__right-bottom-nav-track {
+  width: 48px;
+  height: 12px;
+  border: 1px solid black;
+}
+.hero__right-bottom-nav-cta {
+  display: flex;
+  gap: 10px;
+}
+.hero__right-bottom-nav-cta > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+  border-radius : 24px;
+  width: 48px;
+  height: 48px;
+}
+.hero__right-bottom-nav-cta >a >img{
+  transform: scale(0.6);
+}
+/* STATS */
+.stats {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 50vh;
+  padding: 24px 24px 96px 24px;
+}
+.stats__header {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  width: 50%;
+}
+.stats__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.stats__cards-item {
+  display: flex;
+  flex-direction: column;
+  border-left: 2px solid black;
+  padding-left: 20px;
+  gap: 10px;
+}
+/* CTA */
+.cta {
+  height: 30vh;
+  background-image: url(https://dummyimage.com/1920x1080/a3a3a3/fff);
+  background-size: cover;
+  color: var(--secondary-font);
+}
+.cta__container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100%;
+  padding: 72px 64px;
+}
+
+.cta__container-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* LAYOUT */
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 64px;
+  padding: 64px;
+  background-size: cover;
+  background-position: center;
+  color: var(--primary-font);
+  height: 80vh;
+}
+.layout__intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 24px;
+}
+.layout__cards {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+}
+.layout__cards-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 30px;
+}
+
+/* FOOTER */
+.footer{
+  background-color: #6f6f6f;
+  height: 25vh;
+  color:var(--secondary-font);
+  display: flex;
+  flex-direction: column;
+  padding:48px;
+  justify-content: space-between;
+}
+.footer__top{
+  display: flex;
+  justify-content: space-between;
+}
+.footer__top-logo{
+  width:15%;
+  background: var(--secondary-font);
+}
+.footer__top-links > a{
+  color :var(--secondary-font)
+}
+.footer__top-socials{
+  width:15%;
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+}
+.footer__bottom{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 2%;
+  padding-top:48px;
+  border-top: 1px solid var(--primary-bg);
+}
+.footer__bottom > a{
+  color:var(--secondary-font);
+  text-decoration: underline;
 }
