--- a/styles/main.css
+++ b/styles/main.css
@@ -33,10 +33,10 @@ p{
 .footer__nav{
       position: fixed;
       background: white;
-      border-top: 1px solid black;
       bottom:0;
       left:0;
-      right:0;  
+      right:0;
+      box-shadow:0px -1px 6px 1px rgba(0,0,0,0.15) ;
 }
 
 .footer__nav-list{
