--- a/styles/main.css
+++ b/styles/main.css
@@ -1,64 +1,63 @@
-*{
-      padding : 0;
-      margin :0;
-      box-sizing: border-box;
-      list-style: none;
-      text-decoration: none;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
-:root{
-      --navbar-height : 60px;
-      --primary-font-color :#000;
+:root {
+  --navbar-height: 60px;
+  --primary-font-color: #000;
 }
-body{
-      padding:16px;
-      max-width: 375px;
-      height: 100vh;
-      font-family: Arial, Helvetica, sans-serif;
+body {
+  padding: 16px;
+  max-width: 375px;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
-main{
-      padding-bottom: var(--navbar-height);
+main {
+  padding-bottom: var(--navbar-height);
 }
-a{
-      color:var(--primary-font-color);
+a {
+  color: var(--primary-font-color);
 }
-h2{
-      font-size:1.4rem;
-      font-weight: 700;
+h2 {
+  font-size: 1.4rem;
+  font-weight: 700;
 }
-p{
-      font-size: 0.8rem;
+p {
+  font-size: 0.8rem;
 }
 
 /* NAVBAR FOOTER */
 
-.footer__nav{
-      position: fixed;
-      background: white;
-      bottom:0;
-      left:0;
-      right:0;
-      box-shadow:0px -1px 6px 1px rgba(0,0,0,0.15) ;
+.footer__nav {
+  position: fixed;
+  background: white;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  box-shadow: 0px -1px 6px 1px rgba(0, 0, 0, 0.15);
 }
 
-.footer__nav-list{
-      padding : 0 40px ;
-      height: var(--navbar-height);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+.footer__nav-list {
+  padding: 0 40px;
+  height: var(--navbar-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.footer__nav-list-link{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+.footer__nav-list-link {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.footer__nav-list-link img{
-     width: 32px;
-     height: auto;
+.footer__nav-list-link img {
+  width: 32px;
+  height: auto;
 }
-.footer__nav-list-link p{
-     font-size: 0.6rem;
+.footer__nav-list-link p {
+  font-size: 0.6rem;
 }
-
 
