--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ body {
   padding: 16px;
   max-width: 375px;
   height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 main {
   padding-bottom: var(--navbar-height);
