--- a/styles/main.css
+++ b/styles/main.css
@@ -9,11 +9,13 @@
   --navbar-height: 60px;
   --primary-font-color: #000;
 }
+html{
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
 body {
   padding: 16px;
-  max-width: 375px;
+  max-width: 1000px;
   height: 100vh;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 main {
   padding-bottom: var(--navbar-height);
